Homepage in work

--- a/index.html
+++ b/index.html
@@ -1,67 +1,124 @@
 <!DOCTYPE html>
 <html lang="en-AU">
   <head>
-    <title>Recipe Blog</title>
+    <title>WhereToGo Travel</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Welcome to Cheesecake Factory" />
-    <meta name="keywords" content="cheesecake, cake, food, recipes" />
+    <meta name="description" content="Welcome to WhereToGoTravel Tours" />
+    <meta name="keywords" content="travel, adventure, tours, backpackers" />
     <meta name="author" content="shahyan" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- FONTS  -->
-     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap"
+      rel="stylesheet"
+    />
 
-  
     <!-- CSS Styles  -->
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
- <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
+  <link
+    href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+    rel="stylesheet"
+  />
 
   <body class="main-wrapper">
     <div class="main">
-    
-  <header>
-    <div class="logo-wrap"><a class="logo" href="index.html">WTG</a></div>
-    <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-        <li><a href="recipe.html">About</a></li>
-        <li><a href="origins.html">Tours</a></li>
-    </ul>
-  </header>
-  <section class="hero">
-    <div class="hero-content">
-      <h1 id="hero-headline">ADVENTURE TRAVEL TOURS</h1>
-      <h2 id="hero-subheadline">WHERE WILL YOU GO NEXT?</h2>
+      <header>
+        <div class="logo-wrap"><a class="logo" href="index.html">WTG</a></div>
+        <ul class="nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="recipe.html">About</a></li>
+          <li><a href="origins.html">Tours</a></li>
+        </ul>
+      </header>
+      <section class="hero">
+        <div class="hero-content">
+          <h1 id="hero-headline">ADVENTURE TRAVEL TOURS</h1>
+          <h2 id="hero-subheadline">WHERE WILL YOU GO NEXT?</h2>
 
-      <button id="hero-btn">
-        <a href="#">SEARCH TOURS</a>
-      </button>
-    </div>  
-    </section>
+          <button id="hero-btn">
+            <a href="#">SEARCH TOURS</a>
+          </button>
+        </div>
+      </section>
 
-    <section class="search-wrapper">
-       <form class="search-form"> 
-      <select class="search-form-select" name="country">
-        <option value="volvo">EGYPT</option>
-        <option value="saab">INDIA</option>
-        <option value="fiat">PERU</option>
-        <option value="audi">AUSTRALIA</option>
-      </select>
+      <section class="search-wrapper">
+        <h2 class="search-wrapper-headline">CHOOSE YOUR NEXT ADVENTURE</h2>
+        <form class="search-form">
+          <select class="search-form-select" name="country">
+            <option value="volvo">EGYPT</option>
+            <option value="saab">INDIA</option>
+            <option value="fiat">PERU</option>
+            <option value="audi">AUSTRALIA</option>
+          </select>
 
-      <select class="search-form-select" name="city">
-        <option value="volvo">CAIRO</option>
-        <option value="saab">DEHLI</option>
-        <option value="fiat">CUZCO</option>
-        <option value="audi">ALICE SPRINGS</option>
-      </select>
-      <br><br>
-      <input class="search-form-submit-btn" type="submit" value="Q  Search">
-      </form>    
-  </section>
+          <select class="search-form-select" name="city">
+            <option value="volvo">CAIRO</option>
+            <option value="saab">DEHLI</option>
+            <option value="fiat">CUZCO</option>
+            <option value="audi">ALICE SPRINGS</option>
+          </select>
+          <br /><br />
+          <input
+            class="search-form-submit-btn"
+            type="submit"
+            value="Q  Search"
+          />
+        </form>
+      </section>
 
-
-   
-  </div>
+      <section class="featured">
+        <div class="feature-dest">
+          <div class="featured-image">
+            <img src="images/final/egypt-featured.jpg" />
+          </div>
+          <div class="featured-content">
+            <p class="featured-country-name">EGYPT</p>
+            <h1 class="featured-headline">Discover The Ancient Pyramids</h1>
+            <p class="featured-desc">
+              Discover the unknown of the ancient world. You will tour the
+              ancient pyramids of Egypt and other exciting aritechture sites of
+              the ancient world.
+            </p>
+            <a class="featured-btn" href="#">Learn More</a>
+          </div>
+        </div>
+        <div class="feature-dest">
+          <div class="featured-image">
+            <img src="images/final/taj-featured.jpg" />
+          </div>
+          <div class="featured-content">
+            <p class="featured-country-name">INDIA</p>
+            <h1 class="featured-headline">
+              Journey to Taj Mahal, an iconic symbol of love
+            </h1>
+            <p class="featured-desc">
+              Discover the unknown of the ancient world. You will tour the
+              ancient pyramids of Egypt and other exciting aritechture sites of
+              the ancient world.
+            </p>
+            <a class="featured-btn" href="#">Learn More</a>
+          </div>
+        </div>
+        <div class="feature-dest">
+          <div class="featured-image">
+            <img src="images/final/rome-featured.jpg" />
+          </div>
+          <div class="featured-content">
+            <p class="featured-country-name">ITALY</p>
+            <h1 class="featured-headline">
+              Experience the Colosseum, the Roman gladiatorial
+            </h1>
+            <p class="featured-desc">
+              Discover the unknown of the ancient world. You will tour the
+              ancient pyramids of Egypt and other exciting aritechture sites of
+              the ancient world.
+            </p>
+            <a class="featured-btn" href="#">Learn More</a>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
