--- a/index.html
+++ b/index.html
@@ -119,6 +119,22 @@
           </div>
         </div>
       </section>
+      <section class="destinations-wrapper">
+        <div class="destination-header">
+          <h2 class="destination-headline">Destinations</h2>
+        </div>
+        <div class="destination-pannel">
+          <div class="destination-card one">
+            <a href="#"><h3>Egypt</h3></a>
+          </div>
+          <div class="destination-card two">
+            <a href="#"><h3>India</h3></a>
+          </div>
+          <div class="destination-card three">
+            <a href="#"><h3>Italy</h3></a>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
