--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div class="main">
       <header>
         <div class="logo-wrap"><a class="logo" href="index.html">WTG</a></div>
-        <ul class="nav">
+        <nav class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="recipe.html">About</a></li>
           <li><a href="origins.html">Tours</a></li>
-        </ul>
+        </nav>
       </header>
       <section class="hero">
         <div class="hero-content">
@@ -135,6 +135,23 @@
           </div>
         </div>
       </section>
+      <section class="about-us">
+        <div class="about-wrapper"></div>
+        <div class="about-copy">
+          <h2>Why Choose Us?</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus
+            nulla sint amet et sequi enim? <br />Repudiandae maxime hic sunt
+            omnis eaque! Dicta, impedit consequuntur? Sequi quam pariatur
+            necessitatibus <br />illo quas! Lorem ipsum dolor sit, amet
+            consectetur adipisicing elit. Minus nulla sint amet et sequi enim?
+            <br />Repudiandae maxime hic sunt omnis eaque! Dicta, impedit
+            consequuntur? Sequi quam pariatur necessitatibus illo quas!
+          </p>
+          <a class="about-btn" href="#">ABOUT US</a>
+        </div>
+      </section>
+      <footer>&copy; WhereToGo Travel 2019</footer>
     </div>
   </body>
 </html>
