Destination page done. add invidual tour photos in it, and create seperate pages.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="logo-wrap"><a class="logo" href="index.html">WTG</a></div>
         <nav class="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="recipe.html">About</a></li>
-          <li><a href="origins.html">Tours</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="#">Tours</a></li>
         </nav>
       </header>
       <section class="hero">
@@ -71,7 +71,7 @@
       <section class="featured">
         <div class="feature-dest">
           <div class="featured-image">
-            <img src="images/final/egypt-featured.jpg" />
+            <img src="images/final/home/egypt-featured.jpg" alt="egypt" />
           </div>
           <div class="featured-content">
             <p class="featured-country-name">EGYPT</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="feature-dest">
           <div class="featured-image">
-            <img src="images/final/taj-featured.jpg" />
+            <img src="images/final/home/taj-featured.jpg" alt="taj-mahal" />
           </div>
           <div class="featured-content">
             <p class="featured-country-name">INDIA</p>
@@ -103,7 +103,7 @@
         </div>
         <div class="feature-dest">
           <div class="featured-image">
-            <img src="images/final/rome-featured.jpg" />
+            <img src="images/final/home/rome-featured.jpg" alt="rome" />
           </div>
           <div class="featured-content">
             <p class="featured-country-name">ITALY</p>
@@ -125,13 +125,13 @@
         </div>
         <div class="destination-pannel">
           <div class="destination-card one">
-            <a href="#"><h3>Egypt</h3></a>
+            <a href="egypt-destinations.html"><h3>Egypt</h3></a>
           </div>
           <div class="destination-card two">
-            <a href="#"><h3>India</h3></a>
+            <a href="india-destinations.html"><h3>India</h3></a>
           </div>
           <div class="destination-card three">
-            <a href="#"><h3>Italy</h3></a>
+            <a href="italy-destinations.html"><h3>Italy</h3></a>
           </div>
         </div>
       </section>
