tour pages done. except italy.

--- a/india-destinations.html
+++ b/india-destinations.html
@@ -73,14 +73,14 @@
           <h2 class="destination-headline">Destinations</h2>
         </div>
         <div class="destination-pannel">
-          <div class="destination-card one">
-            <a href="egypt-destinations.html"><h3>Egypt</h3></a>
+          <div class="destination-card india one">
+            <a href="india-tour-1.html"><h3>TAJ MAHAL</h3></a>
           </div>
-          <div class="destination-card two">
-            <a href="india-destinations.html"><h3>India</h3></a>
+          <div class="destination-card india two">
+            <a href="india-tour-2.html"><h3>THE GOLDEN TRIANGLE</h3></a>
           </div>
-          <div class="destination-card three">
-            <a href="italy-destinations.html"><h3>Italy</h3></a>
+          <div class="destination-card india three">
+            <a href="india-tour-3.html"><h3>Ancient City of Jaipur</h3></a>
           </div>
         </div>
       </section>
