website done. Reword conten

--- a/about.html
+++ b/about.html
@@ -34,12 +34,12 @@
       </header>
       <section class="tours-wrapper">
         <div class="tour-header">
-          <div class="tour-image-egypt">
+          <div class="image-about">
             <div class="tour-overlay"></div>
           </div>
           <div class="tour-overview">
             <div class="tour-copy">
-              <h2>EGYPT</h2>
+              <h2>ABOUT US</h2>
               <br />
               <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab
@@ -55,32 +55,9 @@
                 />
               </div>
               <div class="price-box">
-                <b><p>FROM $2,999 20% SALE</p></b>
+                <b><p>5 STAR SERVICE</p></b>
               </div>
             </div>
-            <div>
-              <img
-                class="tour-feature-img"
-                src="images/final/destination/egypt/feature-img.png"
-                alt="feature image"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="destinations-wrapper">
-        <div class="destination-header">
-          <h2 class="destination-headline">Destinations</h2>
-        </div>
-        <div class="destination-pannel">
-          <div class="destination-card egypt one">
-            <a href="egypt-tour-1.html"><h3>Egypt Cruise</h3></a>
-          </div>
-          <div class="destination-card egypt two">
-            <a href="egypt-tour-2.html"><h3>El Fayoum pyramids</h3></a>
-          </div>
-          <div class="destination-card egypt three">
-            <a href="egypt-tour-3.html"><h3>Nile Cruise</h3></a>
           </div>
         </div>
       </section>
