--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Tours</a></li>
+          <li><a href="reference.html">References</a></li>
         </nav>
       </header>
       <section class="hero">
@@ -38,7 +38,7 @@
           <h2 id="hero-subheadline">WHERE WILL YOU GO NEXT?</h2>
 
           <button id="hero-btn">
-            <a href="#">SEARCH TOURS</a>
+            <a href="#destinations">SEARCH TOURS</a>
           </button>
         </div>
       </section>
@@ -81,7 +81,7 @@
               ancient pyramids of Egypt and other exciting aritechture sites of
               the ancient world.
             </p>
-            <a class="featured-btn" href="#">Learn More</a>
+            <a class="featured-btn" href="egypt-tour-1.html">Learn More</a>
           </div>
         </div>
         <div class="feature-dest">
@@ -98,7 +98,7 @@
               ancient pyramids of Egypt and other exciting aritechture sites of
               the ancient world.
             </p>
-            <a class="featured-btn" href="#">Learn More</a>
+            <a class="featured-btn" href="india-tour-1.html">Learn More</a>
           </div>
         </div>
         <div class="feature-dest">
@@ -115,11 +115,11 @@
               ancient pyramids of Egypt and other exciting aritechture sites of
               the ancient world.
             </p>
-            <a class="featured-btn" href="#">Learn More</a>
+            <a class="featured-btn" href="italy-tour-1.html">Learn More</a>
           </div>
         </div>
       </section>
-      <section class="destinations-wrapper">
+      <section id="destinations" class="destinations-wrapper">
         <div class="destination-header">
           <h2 class="destination-headline">Destinations</h2>
         </div>
@@ -148,7 +148,7 @@
             <br />Repudiandae maxime hic sunt omnis eaque! Dicta, impedit
             consequuntur? Sequi quam pariatur necessitatibus illo quas!
           </p>
-          <a class="about-btn" href="#">ABOUT US</a>
+          <a class="about-btn" href="about.html">ABOUT US</a>
         </div>
       </section>
       <footer>&copy; WhereToGo Travel 2019</footer>
