--- a/india-tour-1.html
+++ b/india-tour-1.html
@@ -29,7 +29,7 @@
         <nav class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Tours</a></li>
+          <li><a href="reference.html">References</a></li>
         </nav>
       </header>
       <section class="my-tour-container">
@@ -60,9 +60,10 @@
         <div class="my-tour-brief">
           <h2>One of the wonders of the world</h2>
           <p>
-            In four days we will visit India’s most essential destinations including Agra’s Taj Mahal, Jaipur’s Amber Fort and Delhi’s cornucopia of fascinating sights. But a journey with Reality Tours is much more than traditional sightseeing.
-
-
+            In four days we will visit India’s most essential destinations
+            including Agra’s Taj Mahal, Jaipur’s Amber Fort and Delhi’s
+            cornucopia of fascinating sights. But a journey with Reality Tours
+            is much more than traditional sightseeing.
           </p>
         </div>
       </section>
