--- a/italy-destinations.html
+++ b/italy-destinations.html
@@ -29,7 +29,7 @@
         <nav class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Tours</a></li>
+          <li><a href="reference.html">References</a></li>
         </nav>
       </header>
       <section class="tours-wrapper">
@@ -73,14 +73,16 @@
           <h2 class="destination-headline">Destinations</h2>
         </div>
         <div class="destination-pannel">
-          <div class="destination-card one">
-            <a href="egypt-destinations.html"><h3>Egypt</h3></a>
+          <div class="destination-card italy one">
+            <a href="italy-tour-1.html"><h3>The Colosseum, Rome</h3></a>
           </div>
-          <div class="destination-card two">
-            <a href="india-destinations.html"><h3>India</h3></a>
+          <div class="destination-card italy two">
+            <a href="italy-tour-2.html"><h3>Vatican City</h3></a>
           </div>
-          <div class="destination-card three">
-            <a href="italy-destinations.html"><h3>Italy</h3></a>
+          <div class="destination-card italy three">
+            <a href="italy-tour-3.html"
+              ><h3>Pompeii Ruins & Mt Vesuvius Volcano</h3></a
+            >
           </div>
         </div>
       </section>
