--- a/italy-tour-1.html
+++ b/italy-tour-1.html
@@ -34,11 +34,11 @@
       </header>
       <section class="my-tour-container">
         <div class="my-tour-box">
-          <div class="my-tour-image egypt-tour-1">
+          <div class="my-tour-image italy-tour-1">
             <div class="tour-overlay"></div>
           </div>
           <div class="my-tour-overview">
-            <h3>Egypt Cruise: In the Wake of the Pharaohs</h3>
+            <h3>Full Day Adventure to the Colosseum</h3>
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
@@ -58,41 +58,35 @@
       </section>
       <section class="my-tour-brief-wrap">
         <div class="my-tour-brief">
-          <h2>The kingdom of kingdoms Egypt</h2>
+          <h2>Guide Tour of the Colosseum</h2>
           <p>
-            The kingdom of kingdoms Egypt is a country of rugged, harsh beauty
-            mixed with reminders of what was arguably the most impressive
-            ancient civilization history has ever known. The awe-inspiring
-            treasures and stunning landscapes of this country are perfectly
-            complemented by the warmth and hospitality of its people. You can't
-            travel back in time (at least, not yet), but exploring Egypt is
-            close enough.
+            Follow in the footsteps of the fearless gladiators of Ancient Rome
+            and enter the Colosseum with no need to wait in line and explore the
+            magnificent amphitheater. You will be added to a small group with a
+            privileged entrance and after the security check you’ll be free to
+            explore the Colosseum by yourself. Read more about Colosseum
+            Skip-the-line ticket: Self-Guided Tour 2019 - Rome -
+            https://www.viator.com/en-AU/tours/Rome/Colosseum-Skip-the-line-ticket-Self-Guided-Tour/d511-48974P7?mcid=56757
           </p>
         </div>
       </section>
       <section class="my-tour-details-wrapper">
         <div class="my-tour-details">
           <img
-            src="images/final/tours/egypt-tour-1/egypt-photo1.jpg"
+            src="images/final/destination/italy/feature-img-italy.jpg"
             alt="travel"
           />
           <div class="my-tour-content">
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Discover the history of the Colosseum and Ancient Rome
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Skip the long lines to enter the monument
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Access the Palatine Hill and the Roman Forum
               </li>
             </ul>
           </div>
