--- a/italy-tour-2.html
+++ b/italy-tour-2.html
@@ -34,11 +34,11 @@
       </header>
       <section class="my-tour-container">
         <div class="my-tour-box">
-          <div class="my-tour-image egypt-tour-1">
+          <div class="my-tour-image italy-tour-2">
             <div class="tour-overlay"></div>
           </div>
           <div class="my-tour-overview">
-            <h3>Egypt Cruise: In the Wake of the Pharaohs</h3>
+            <h3>7 DAY TOUR OF Vatican City</h3>
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
@@ -58,22 +58,18 @@
       </section>
       <section class="my-tour-brief-wrap">
         <div class="my-tour-brief">
-          <h2>The kingdom of kingdoms Egypt</h2>
+          <h2>Experience the holy city</h2>
           <p>
-            The kingdom of kingdoms Egypt is a country of rugged, harsh beauty
-            mixed with reminders of what was arguably the most impressive
-            ancient civilization history has ever known. The awe-inspiring
-            treasures and stunning landscapes of this country are perfectly
-            complemented by the warmth and hospitality of its people. You can't
-            travel back in time (at least, not yet), but exploring Egypt is
-            close enough.
+            Immerse yourself in the Vatican's awe-inspiring art with no-wait
+            access to the Sistine Chapel, Vatican Museums, St. Peter’s Basilica,
+            and more.
           </p>
         </div>
       </section>
       <section class="my-tour-details-wrapper">
         <div class="my-tour-details">
           <img
-            src="images/final/tours/egypt-tour-1/egypt-photo1.jpg"
+            src="images/final/tours/italy-tour-2/italy-feature.jpg"
             alt="travel"
           />
           <div class="my-tour-content">
