--- a/italy-tour-3.html
+++ b/italy-tour-3.html
@@ -34,11 +34,11 @@
       </header>
       <section class="my-tour-container">
         <div class="my-tour-box">
-          <div class="my-tour-image egypt-tour-1">
+          <div class="my-tour-image italy-tour-3">
             <div class="tour-overlay"></div>
           </div>
           <div class="my-tour-overview">
-            <h3>Egypt Cruise: In the Wake of the Pharaohs</h3>
+            <h3>12 Days Tour: Pompeii Ruins & Mt Vesuvius Volcano Tour</h3>
             <div class="my-tour-highlight-wrap">
               <div class="my-tour-highlight">
                 <h5>Tour Date:</h5>
@@ -58,41 +58,39 @@
       </section>
       <section class="my-tour-brief-wrap">
         <div class="my-tour-brief">
-          <h2>The kingdom of kingdoms Egypt</h2>
+          <h2>Pompeii Ruins & Mt Vesuvius Volcano Tour</h2>
           <p>
-            The kingdom of kingdoms Egypt is a country of rugged, harsh beauty
-            mixed with reminders of what was arguably the most impressive
-            ancient civilization history has ever known. The awe-inspiring
-            treasures and stunning landscapes of this country are perfectly
-            complemented by the warmth and hospitality of its people. You can't
-            travel back in time (at least, not yet), but exploring Egypt is
-            close enough.
+            Take a day out of your Rome vacation to get acquainted with Mt.
+            Vesuvius and Pompeii. This day trip to Pompeii includes a
+            steady-paced hike up Mt. Vesuvius (summer only) or a visit to Naples
+            when Vesuvius is closed in winter, plus a pizza in Naples and a tour
+            of the UNESCO-listed digs at Pompeii. Hear the history from a local
+            guide and admire artifacts that date back to the infamous Mt.
+            Vesuvius eruption of AD 79. Read more about Rome to Pompeii and Mt.
+            Vesuvius Day Trip with Admission Fees 2019 -
+            https://www.viator.com/tours/Rome/Pompeii-Day-Trip-from-Rome/d511-3731VESUVIUS?mcid=56757
           </p>
         </div>
       </section>
       <section class="my-tour-details-wrapper">
         <div class="my-tour-details">
           <img
-            src="images/final/tours/egypt-tour-1/egypt-photo1.jpg"
+            src="images/final/tours/italy-tour-3/italy-feature.jpg"
             alt="travel"
           />
           <div class="my-tour-content">
             <h4>Tour Details:</h4>
             <ul>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Hike up the side of the volcano and walk along its ridge, gazing
+                into the crater
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Drink in dramatic views over the Bay of Naples
               </li>
               <li>
-                Explore Seti I’s temple at Abydos, considered somewhat off the
-                beaten track yet home to the most beautiful raised reliefs in
-                the entire country
+                Day trip to Mount Vesuvius and Pompeii from Rome with an expert
+                guide
               </li>
             </ul>
           </div>
