--- a/india-tour-3.html
+++ b/india-tour-3.html
@@ -29,7 +29,7 @@
         <nav class="nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="#">Tours</a></li>
+          <li><a href="reference.html">References</a></li>
         </nav>
       </header>
       <section class="my-tour-container">
